--- a/templates/index.html
+++ b/templates/index.html
@@ -59,16 +59,16 @@
                 <h3 class="subtitle">I speak </h3>
                 <div class="icon-about-align">
                     <p class="p-img-icon">
-                        <img alt="portugal" width="30px" src="static/images/icons/portugal.png" class="lang-img-icon" />
+                        <img alt="portugal" width="30px" src="static/images/icons/portugal.webp" class="lang-img-icon" />
                     </p>
                     <p class="p-img-icon">
-                        <img alt="uk" width="30px" src="static/images/icons/united-kingdom.png" class="lang-img-icon" />
+                        <img alt="uk" width="30px" src="static/images/icons/united-kingdom.webp" class="lang-img-icon" />
                     </p>
                     <p class="p-img-icon">
-                        <img alt="france" width="30px" src="static/images/icons/france.png" class="lang-img-icon"/>
+                        <img alt="france" width="30px" src="static/images/icons/france.webp" class="lang-img-icon"/>
                     </p>        
                     <p class="p-img-icon">
-                        <img alt="spain" width="30px" src="static/images/icons/spain.png" class="lang-img-icon"/>
+                        <img alt="spain" width="30px" src="static/images/icons/spain.webp" class="lang-img-icon"/>
                     </p>       
                 </div>
             </div>
@@ -169,8 +169,25 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
+                <a href="https://medium.com/@macrodrigues/build-an-app-to-detect-butterflies-with-tensorflow-and-kivy-772c6fd362b4">
+                  <img src="static/images/projects/butterflies_detector.webp" alt="" class="img-fluid card-img-top">
+                </a>    
+              <div class="p-4">
+                <h5 class="title-img-gallery">Build an App to detect butterflies with TensorFlow and Kivy</h5>
+                <p class="small text-muted mb-0">Using CNN to detect 11 different species of southern mediterranean butterflies.</p>
+                <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
+                    <p>Deep Learning</p>
+                </div>                 
+              </div>
+            </div>
+        </div>
+        <!-- End -->
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/is-this-transaction-legit-revolut-fraud-detection-facddbc0fc80">
-                  <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*FAfnNRfDN7Duf9XuV8794w.jpeg" width="30px" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/fraud_detection_revolut.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
                 <h5 class="title-img-gallery">Is this transaction legit? Revolut Fraud Detection</h5>
@@ -187,11 +204,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/web-scraping-with-scrapy-and-splash-3d5666ba78ff">
-                  <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*Z02uV_be03OprLACopW2pQ.jpeg" width="30px" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/scrapy_vans.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
                 <h5 class="title-img-gallery">Web Scraping with Scrapy and Splash</h5>
-                <p class="small text-muted mb-0">I used the Scrapy framework and Splash as the headless browser to do web scraping on Yescapa website.</p>
+                <p class="small text-muted mb-0">Scrapy framework and Splash to scrape Yescapa website.</p>
                 <div class="project-category" style="background-color: rgba(105, 63, 7, 0.856); color: wheat">
                     <p>Web Scraping</p>
                 </div>
@@ -204,11 +221,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/gather-data-by-creating-a-survey-app-with-flask-wtf-feb0053f7a74">
-                  <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ejZJQhNHVx5DMl4q9KJeVw.jpeg" width="30px" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/flask_forms.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
                 <h5 class="title-img-gallery">Gather data by creating a survey app with Flask-WTF</h5>
-                <p class="small text-muted mb-0">With Flask and Flask-WTF, you can easily build forms with the most common widgets. In this project, I pretend to build a survey to gather enough data for a market study.</p>
+                <p class="small text-muted mb-0">Flask and Flask-WTF, to build forms. Gather data with a custom form.</p>
                 <div class="project-category" style="background-color: rgba(19, 43, 98, 0.856); color: wheat">
                     <p>Web Development</p>
                 </div>
@@ -221,7 +238,7 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/global-trades-visualization-using-dash-plotly-and-flask-b528fcab1e5e">
-                  <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*80pBsex_LNm_kPJuOZqf9g.png" width="30px" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/global_trades.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
                 <h5 class="title-img-gallery">Analysing Global Trades with Dash Plotly and Flask</h5>
@@ -238,11 +255,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
               <a href="https://peakd.com/hive-163521/@macrodrigues/building-a-dashboard-with-dash-and-plotly">
-                <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23tw9treuKswcSvpTHzRv16Y9STBJGjzSY4URHFd52ShsDcVUW62pD4nXfjmni1Ce7cp8.png" width="30px" alt="" class="img-fluid card-img-top">
+                <img src="static/images/projects/nasa_exoplanets.webp" width="30px" alt="" class="img-fluid card-img-top">
               </a>    
             <div class="p-4">
               <h5 class="title-img-gallery">Building a dashboard with Dash and Plotly</h5>
-              <p class="small text-muted mb-0">Dash library from Plotly. Allows to build HTML and CSS components, that can easily be connected to Plotly graphs and other components. Here a simple example of a dashboard with data of exoplanets from NASA database. </p>
+              <p class="small text-muted mb-0">Use Dash and Plotly to analyze exoplanets from NASA database. </p>
               <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
                 <p>Data Visualization</p>
               </div>               
@@ -255,11 +272,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://peakd.com/hive-169321/@macrodrigues/extract-attachments-from-email-with-python">
-                  <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23viPHv5Tc3xZTfomVEbU4NBCaBzCuZvzGDFmgrUXHvLC43Ua2a1kWiqTi3GRmGHyWfmX.png" width="30px" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/extract_from_outlook.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
                 <h5 class="title-img-gallery">Extract attachments from email with Python</h5>
-                <p class="small text-muted mb-0">pywin 32 is python library for windows, adapted from VBA, which allows to interact with outlook.</p>
+                <p class="small text-muted mb-0">Use pywin 32 python library to interact with Outlook.</p>
                 <div class="project-category" style="background-color: rgb(78, 81, 79); color: wheat">
                     <p>Automation</p>
                 </div>                  
@@ -267,50 +284,17 @@
             </div>
         </div>
         <!-- End -->
-  
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://peakd.com/hive-163521/@macrodrigues/building-and-apk-to-detect-mediterranean-butterflies">
-                  <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/EpEEva5cF9qQQteMEes1QXJcqg9cLsz44YGAFzacv6xx4GouC6Ef27GvA4JaJ5r6Jjt.JPG" alt="" class="img-fluid card-img-top">
-                </a>    
-              <div class="p-4">
-                <h5 class="title-img-gallery">Building an APK to detect mediterranean butterflies</h5>
-                <p class="small text-muted mb-0">Using Kivy and Buildozer Python libraries, to generate an .apk. Debugging using android studio.</p>
-                <div class="project-category" style="background-color: rgb(236, 173, 47); color: rgb(0, 0, 0)">
-                    <p>GUI Development</p>
-                </div>                       
-              </div>
-            </div>
-        </div>
-        <!-- End -->
-  
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://peakd.com/hive-163521/@macrodrigues/butterfly-detector-using-cnn">
-                  <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23wWyFs5wbWiXjMsCuKCBVEeD2qWbogcaWBRCBRmihSNkwYsHdjsjaHrox6G4qMx1VrCJ.JPG" alt="" class="img-fluid card-img-top">
-                </a>    
-              <div class="p-4">
-                <h5 class="title-img-gallery">Butterfly detector using CNN</h5>
-                <p class="small text-muted mb-0">Using CNN transfer learning to detect 11 different species of southern mediterranean butterflies.</p>
-                <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                    <p>Deep Learning</p>
-                </div>                 
-              </div>
-            </div>
-        </div>
-        <!-- End -->
+
   
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://peakd.com/hive-163521/@macrodrigues/using-nlp-on-job-descriptions">
-                  <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23wCbRqgxQryjEutixtT61x5JisBR6eJCTKwnytrN3wj8QEADED5atfiKu5G6ADPmVzfz.png" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/skills_matcher.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
                 <h5 class="title-img-gallery">Using NLP on Job Descriptions</h5>
-                <p class="small text-muted mb-0">NLP models were developed in order to detect skills, knowledge, minimum experience and levels (degree) in job descriptions. </p>
+                <p class="small text-muted mb-0">NER model developed with Spacy to detect key words in job descriptions. </p>
                 <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
                     <p>Deep Learning</p>
                 </div>                 
@@ -323,11 +307,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://github.com/macrodrigues/plantasia">
-                  <img src="https://user-images.githubusercontent.com/62621924/147284141-995f4628-bd49-4e75-be52-53717efe0554.png" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/plantasia.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
-                <h5 class="title-img-gallery">Tkinter GUI to be used as a repository for plants and mushrooms</h5>
-                <p class="small text-muted mb-0">The user can easily look for species, families and properties and customize the GUI as he wants, by adding/removing species.</p>
+                <h5 class="title-img-gallery">GUI to be used as a repository for plants and mushrooms</h5>
+                <p class="small text-muted mb-0">Look for species, families and properties of muchrooms and plants.</p>
                 <div class="project-category" style="background-color: rgb(236, 173, 47); color: rgb(0, 0, 0)">
                     <p>GUI Development</p>
                 </div>                    
@@ -340,11 +324,11 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://peakd.com/hive-169321/@macrodrigues/btc-eth-steem-and-hive-analysis-using-python-from-2020-to-2021">
-                  <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23wXQYGimn7Mp7r5Cu1Zxvmwc1zYtM1zihMZqiVvy5zEGo1bgGKGNAqykoHVtQQRuhibn.png" alt="" class="img-fluid card-img-top">
+                  <img src="static/images/projects/crypto_analysis.webp" alt="" class="img-fluid card-img-top">
                 </a>    
               <div class="p-4">
-                <h5 class="title-img-gallery">BTC, ETH, STEEM and HIVE analysis using Python (from 2020 to 2021).</h5>
-                <p class="small text-muted mb-0">Crypto Market study of BTC, ETH, STEEM and HIVE, from 2020 to 2021 (one full year). The main goal of this analysis, is to make a comparison of these four cryptocurrencies, using several python libraries and statistical analysis.</p>
+                <h5 class="title-img-gallery">BTC, ETH, STEEM and HIVE data analysis using Python</h5>
+                <p class="small text-muted mb-0">Crypto Market study of BTC, ETH, STEEM and HIVE, from 2020 to 2021.</p>
                 <div class="project-category" style="background-color: rgb(197, 207, 0); color: rgb(0, 0, 0)">
                     <p>Data Analysis</p>
                 </div>                   
