add links and dubai project

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo02" style="visibility:inherit">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a href="https://www.corkforms.xyz/" class="nav-link nav-link-special">New</a>
-            </li>                                  
+                <a href="https://discord.gg/ZHSbkkYh" target="_blank" class="nav-link nav-link-special">New</a>
+            </li>
             <li class="nav-item">
                 <a href="#skills" class="nav-link">Skills</a>
             </li>
@@ -20,10 +20,10 @@
             </li>
             <li class="nav-item">
                 <a href="https://www.medium.com/@macrodrigues" class="nav-link">Blog</a>
-            </li>            
+            </li>
             <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
-            </li>                        
+            </li>
         </ul>
     </div>
 </nav>
@@ -66,10 +66,10 @@
                     </p>
                     <p class="p-img-icon">
                         <img alt="france" width="30px" src="static/images/icons/france.webp" class="lang-img-icon"/>
-                    </p>        
+                    </p>
                     <p class="p-img-icon">
                         <img alt="spain" width="30px" src="static/images/icons/spain.webp" class="lang-img-icon"/>
-                    </p>       
+                    </p>
                 </div>
             </div>
         </div>
@@ -78,23 +78,32 @@
         <div class="row">
             <div class="icon-about-container">
                 <h3 class="subtitle">Find me here</h3>
-                <div class="icon-about-align" style="margin-top:4%">             
+                <div class="icon-about-align" style="margin-top:4%">
                     <p class="p-img-icon">
                         <a href="https://www.linkedin.com/in/macrodrigues" target="_blank">
-                            <img alt="linkedin" width="60x" src="static/images/icons/linkedin.svg" class="img-icon" />
+                            <img alt="linkedin" target="_blank" width="50x" src="static/images/icons/linkedin.svg" class="img-icon" />
                         </a>
                     </p>
                     <p class="p-img-icon">
                         <a href="https://medium.com/@macrodrigues" target="_blank">
-                            <img alt="linkedin" width="80px" src="static/images/icons/medium.svg" class="img-icon" />
-                        </a>
-                    </p>                        
-                    <p class="p-img-icon">
-                        <a href="https://github.com/macrodrigues" target="_blank">
-                            <img alt="github" width="60px" src="static/images/icons/github.svg" class="img-icon" />
+                            <img alt="linkedin" target="_blank" width="70px" src="static/images/icons/medium.svg" class="img-icon" />
                         </a>
                     </p>
-                                      
+                    <p class="p-img-icon">
+                        <a href="https://github.com/macrodrigues" target="_blank">
+                            <img alt="github" target="_blank" width="50px" src="static/images/icons/github.svg" class="img-icon" />
+                        </a>
+                    </p>
+                    <p class="p-img-icon">
+                      <a href="https://unsplash.com/@macrodrigues" target="_blank">
+                        <img alt="unsplash" target="_blank" width="50px" src="static/images/icons/unsplash.svg" class="img-icon" />
+                      </a>
+                    </p>
+                    <p class="p-img-icon">
+                      <a href="https://discord.gg/ZHSbkkYh" target="_blank">
+                        <img alt="discord" target="_blank" width="50px" src="static/images/icons/discord.svg" class="img-icon" />
+                      </a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -110,7 +119,7 @@
                     <div class="icon-align">
                         <i class="material-symbols-outlined md-100">equalizer</i>
                         <span class="caption-icon">Data Analysis, Data Visualization, Dashbords (pandas, plotly, dash, ...)</span>
-                    </div>                            
+                    </div>
                     <div class="icon-align">
                         <i class="material-symbols-outlined md-100">dvr</i>
                         <span class="caption-icon">Web Development, CSS, HTML, Flask, Django</span>
@@ -168,16 +177,34 @@
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a href="https://medium.com/@macrodrigues/dubai-real-estate-sales-forecasting-d765f61225d4">
+              <img src="static/images/projects/dubai.webp" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">Dubai Real Estate: Sales Forecasting</h5>
+              <p class="small text-muted mb-0">Reporting the steps to predict the sales transaction amounts of Dubai properties.
+              </p>
+                <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
+                  <p>Machine Learning</p>
+                </div>
+            </div>
+          </div>
+        </div>
+        <!-- End -->
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/build-an-app-to-detect-butterflies-with-tensorflow-and-kivy-772c6fd362b4">
-                  <img src="static/images/projects/butterflies_detector.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/butterflies_detector.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Build an App to detect butterflies with TensorFlow and Kivy</h5>
                 <p class="small text-muted mb-0">Using CNN to detect 11 different species of southern mediterranean butterflies.</p>
                 <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
                     <p>Deep Learning</p>
-                </div>                 
+                </div>
               </div>
             </div>
         </div>
@@ -187,25 +214,25 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/is-this-transaction-legit-revolut-fraud-detection-facddbc0fc80">
-                  <img src="static/images/projects/fraud_detection_revolut.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/fraud_detection_revolut.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Is this transaction legit? Revolut Fraud Detection</h5>
-                <p class="small text-muted mb-0">This project aims to build a model to detect fraudsters on a Revolut Dataset.</p>
+                <p class="small text-muted mb-0">Using Machine Learning to detect fraudsters in a Revolut Dataset.</p>
                 <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
                     <p>Machine Learning</p>
                 </div>
               </div>
             </div>
           </div>
-          <!-- End -->        
+          <!-- End -->
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/web-scraping-with-scrapy-and-splash-3d5666ba78ff">
-                  <img src="static/images/projects/scrapy_vans.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/scrapy_vans.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Web Scraping with Scrapy and Splash</h5>
                 <p class="small text-muted mb-0">Scrapy framework and Splash to scrape Yescapa website.</p>
@@ -216,13 +243,13 @@
             </div>
           </div>
           <!-- End -->
- 
+
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/gather-data-by-creating-a-survey-app-with-flask-wtf-feb0053f7a74">
-                  <img src="static/images/projects/flask_forms.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/flask_forms.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Gather data by creating a survey app with Flask-WTF</h5>
                 <p class="small text-muted mb-0">Flask and Flask-WTF, to build forms. Gather data with a custom form.</p>
@@ -233,88 +260,88 @@
             </div>
           </div>
           <!-- End -->
-        
+
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/global-trades-visualization-using-dash-plotly-and-flask-b528fcab1e5e">
-                  <img src="static/images/projects/global_trades.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/global_trades.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Analysing Global Trades with Dash Plotly and Flask</h5>
-                <p class="small text-muted mb-0">This project aims to analise and visualise global trades using Dash Plotly and Flask.</p>
+                <p class="small text-muted mb-0">This project aims to analize and visualise global trades using Dash Plotly and Flask.</p>
                 <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat"">
                     <p>Data Visualization</p>
-                </div>                
+                </div>
               </div>
             </div>
           </div>
           <!-- End -->
-            
+
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
           <div class="bg-white rounded shadow-sm">
               <a href="https://peakd.com/hive-163521/@macrodrigues/building-a-dashboard-with-dash-and-plotly">
-                <img src="static/images/projects/nasa_exoplanets.webp" width="30px" alt="" class="img-fluid card-img-top">
-              </a>    
+                <img src="static/images/projects/nasa_exoplanets.webp" target="_blank" alt="" class="img-fluid card-img-top">
+              </a>
             <div class="p-4">
               <h5 class="title-img-gallery">Building a dashboard with Dash and Plotly</h5>
               <p class="small text-muted mb-0">Use Dash and Plotly to analyze exoplanets from NASA database. </p>
               <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
                 <p>Data Visualization</p>
-              </div>               
+              </div>
             </div>
           </div>
         </div>
         <!-- End -->
-  
+
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://peakd.com/hive-169321/@macrodrigues/extract-attachments-from-email-with-python">
-                  <img src="static/images/projects/extract_from_outlook.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/extract_from_outlook.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Extract attachments from email with Python</h5>
                 <p class="small text-muted mb-0">Use pywin 32 python library to interact with Outlook.</p>
                 <div class="project-category" style="background-color: rgb(78, 81, 79); color: wheat">
                     <p>Automation</p>
-                </div>                  
+                </div>
               </div>
             </div>
         </div>
         <!-- End -->
 
-  
+
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://peakd.com/hive-163521/@macrodrigues/using-nlp-on-job-descriptions">
-                  <img src="static/images/projects/skills_matcher.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/skills_matcher.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">Using NLP on Job Descriptions</h5>
                 <p class="small text-muted mb-0">NER model developed with Spacy to detect key words in job descriptions. </p>
                 <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
                     <p>Deep Learning</p>
-                </div>                 
+                </div>
               </div>
             </div>
         </div>
         <!-- End -->
-  
+
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://github.com/macrodrigues/plantasia">
-                  <img src="static/images/projects/plantasia.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/plantasia.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">GUI to be used as a repository for plants and mushrooms</h5>
                 <p class="small text-muted mb-0">Look for species, families and properties of muchrooms and plants.</p>
                 <div class="project-category" style="background-color: rgb(236, 173, 47); color: rgb(0, 0, 0)">
                     <p>GUI Development</p>
-                </div>                    
+                </div>
               </div>
             </div>
         </div>
@@ -324,18 +351,18 @@
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
                 <a href="https://peakd.com/hive-169321/@macrodrigues/btc-eth-steem-and-hive-analysis-using-python-from-2020-to-2021">
-                  <img src="static/images/projects/crypto_analysis.webp" alt="" class="img-fluid card-img-top">
-                </a>    
+                  <img src="static/images/projects/crypto_analysis.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
               <div class="p-4">
                 <h5 class="title-img-gallery">BTC, ETH, STEEM and HIVE data analysis using Python</h5>
                 <p class="small text-muted mb-0">Crypto Market study of BTC, ETH, STEEM and HIVE, from 2020 to 2021.</p>
                 <div class="project-category" style="background-color: rgb(197, 207, 0); color: rgb(0, 0, 0)">
                     <p>Data Analysis</p>
-                </div>                   
+                </div>
               </div>
             </div>
         </div>
-        <!-- End -->   
+        <!-- End -->
 </div>
 
 <!-- contact section -->
