--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo02" style="visibility:inherit">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a href="https://discord.gg/ZHSbkkYh" target="_blank" class="nav-link nav-link-special">New</a>
+                <a href="https://discord.gg/ZTNAp4qZYX" target="_blank" class="nav-link nav-link-special">New</a>
             </li>
             <li class="nav-item">
                 <a href="#skills" class="nav-link">Skills</a>
@@ -174,6 +174,22 @@
     </div>
     <div>
       <div class="row fade-in">
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+          <div class="bg-white rounded shadow-sm">
+            <a href="https://medium.com/@macrodrigues/vega-altair-if-plotly-and-seaborn-had-a-child-5e89f5984ee7">
+              <img src="static/images/projects/vega_altair.webp" target="_blank" alt="" class="img-fluid card-img-top">
+            </a>
+            <div class="p-4">
+              <h5 class="title-img-gallery">Vega-Altair, if Plotly and Seaborn had a child</h5>
+              <p class="small text-muted mb-0">Interactive Data Visualization using Vega-Altair. </p>
+              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
+                <p>Data Visualization</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
